--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Like the other scientist in those years;Leibniz good at more than one dicipline 
 Gottfried Wilhelm Leibniz dead on November 14,1716 and he was 70 years old when he was dead.
 </p>
 
-<p><img src="http://www.leibniz-gemeinschaft.de/fileadmin/_processed_/csm_LeibnizKopf1_2__e36d0cf240.jpg" alt="Mountain View">
+<p><img src="http://s7.computerhistory.org/is/image/CHM/102636916-03-01?%24re-medium%24" alt="Mountain View">
 <img src="http://media-2.web.britannica.com/eb-media/18/150318-004-A064E74D.jpg" alt="Mountain View" align="right"></p>
 
 <p><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
